# veritas-thesis-ai

./: .gitignore  DESIGN.md  README.md  Veritas_Redesign_Implementation_Prompts.md  deep-research-report.md  original_plan.md
backend/: Dockerfile  pyproject.toml  test_academic_apis.py  test_active_steering.py  test_auth_production.py  test_enterprise_admin.py  test_fact_verification.py  test_plagiarism_detection.py  test_socratic_stream.py  test_supervisor_comments.py  test_supervisor_dashboard.py  test_supervisor_ledger.py  test_thesis_exporter.py  verification_test.py
backend/app/: config.py  database.py  database_seed.py  main.py  models.py  schemas.py
backend/app/routers/: admin.py  auth.py  dependencies.py  general.py  socratic.py  thesis.py
backend/app/services/: academic_clients.py  fact_verifier.py  ledger_service.py  outline_generator.py  plagiarism_detector.py  prompt_gating.py  query_synthesizer.py  security.py  shadow_engine.py  socratic_mentor.py
frontend/: next.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/app/: layout.tsx  page.tsx
frontend/src/app/app/projects/%5BprojectId%5D/: page.tsx
frontend/src/app/app/projects/%5BprojectId%5D/audit/: page.tsx
frontend/src/app/app/projects/[projectId]/: page.tsx
frontend/src/app/app/projects/new/: page.tsx
frontend/src/app/context/: AuthContext.tsx
frontend/src/app/design-preview/: page.tsx
frontend/src/app/sign-in/: page.tsx
frontend/src/app/supervisor/: page.tsx
frontend/src/app/verify/: page.tsx
nginx/: nginx.conf
(+4 files in other folders)
